--- a/app/components/Jackpot.module.css
+++ b/app/components/Jackpot.module.css
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-self: center;
-  margin-top: 6rem;
-  font-size: 15;
+  margin-top: 1rem;
+  font-size: 30;
   background: #b61c00;
   border-radius: 50%;
   overflow: hidden;
@@ -14,12 +14,13 @@
 
 .container .middlebutton {
   position: absolute;
-  width: 6em;
-  height: 6em;
+  width: 34vw;
+  aspect-ratio: 1/1;
+  max-width: 13.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3em;
+  font-size: 2.5em;
   color: black; 
   text-transform: uppercase;
   border-radius: 50%;
@@ -46,8 +47,9 @@
 }
 
 .wheel {
-  height: 50em;
-  width: 50em;
+  width: 95vw;
+  max-width: 50rem;
+  aspect-ratio: 1/1;
   border-radius: 50%;
   border: 5px solid #b61c00;
   position: relative;
@@ -73,7 +75,6 @@
   width: 100%;
   height: 100%;
   text-align: start;
-  font-size: 1.8rem;
 }
 
 @keyframes spin {
@@ -85,3 +86,21 @@
 }
 }
 
+@media (max-width: 1920px) {
+  .container {
+    font-size: 20px;
+  }
+  .wheel {
+    max-width: 35rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    font-size: 3.5vw;
+  }
+
+  .arrow {
+    height: 1.25rem;
+  }
+}
